--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "purocean/php-excel",
     "type": "library",
-    "description": "方便快捷的 Excel 导出导入类，就俩静态方法",
+    "description": "方便快捷的 Excel 导出导入类",
     "keywords": ["php", "excel", "office", "xls", "xlsx"],
     "homepage": "https://github.com/purocean/php-excel",
     "license": "MIT",
